--- a/index.html
+++ b/index.html
@@ -15,30 +15,41 @@
             <div class="logo">
                 <span class="logo__dark">Story</span><br />
                 <span class="logo__light">Boards.</span>
-                <div class="logo__tagline">A New Platform to Share Your Imaginations</div>
+                <div class="logo__tagline">Share Your Imaginations</div>
 
             </div>
             <div>
-                <button class="header__btn">Register Now</button>
+                <a target="_blank" href="https://roopamgarg.typeform.com/to/MWeoowpO">
+                    <button class="header__btn">
+                        Register Now
+                    </button>
+                </a>
             </div>
         </div>
         <div class="header__right">
-            <img src="assets/images/illustrations/pr_color06.png" alt="illustration"/>
+            <img src="assets/images/illustrations/pr_color06.png" alt="illustration" />
         </div>
     </section>
+    <section class="quote">
+        <p>“What we possess is temporary, but what we become is permanent.”</p>
+        <p class="quote__author"> – Devdutt Pattanaik </p>
+    </section>
     <section class="about">
-        
-    <div class="about__img">
-        <img src="assets/images/illustrations/pr_color07.png" alt="illustration"/>
-    </div>
-    <div class="about__content">
-        <div class="logo">
-            <span class="logo__dark">About</span><br />
-            <span class="logo__light">Us.</span>
-            <div class="logo__tagline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus placeat dolor perferendis distinctio excepturi quam deleniti in incidunt, esse rem?</div>
 
+        <div class="about__img">
+            <img src="assets/images/illustrations/pr_color07.png" alt="illustration" />
         </div>
-    </div>
+        <div class="about__content">
+            <div class="logo">
+                <span class="logo__dark">About</span><br />
+                <span class="logo__light">Us.</span>
+                <div class="logo__tagline">
+                    We empower diverse voices and stories all over the world, helping you build a community of readers.
+                    And we intends to provide a platform for all the writers.
+                </div>
+
+            </div>
+        </div>
     </section>
     <footer class="footer">
         <div>
@@ -46,13 +57,13 @@
                 <span class="logo__dark">Story</span><br />
                 <span class="logo__light">Boards.</span>
             </div>
-        
+
         </div>
         <div class="footer__social-links">
-            <img src="assets/images/svg/instagram.svg" alt="instagram" />
-            <img src="assets/images/svg/facebook.svg" alt="instagram" />
-            <img src="assets/images/svg/twitter.svg" alt="instagram" />
-            <img src="assets/images/svg/email.svg" alt="instagram" />
+            <a href="https://www.instagram.com/storyboards.live/?hl=en" target="_blank"><img src="assets/images/svg/instagram.svg" alt="instagram" /></a>
+            <a href="https://www.facebook.com/StoryBoards-118411496670712" target="_blank"><img src="assets/images/svg/facebook.svg" alt="instagram" /></a>
+            <a href="https://twitter.com/StoryBoardsLive" target="_blank"><img src="assets/images/svg/twitter.svg" alt="instagram" /></a>
+            <a href="mail:contact@storyboards.live" target="_blank"><img src="assets/images/svg/email.svg" alt="instagram" /></a>
 
         </div>
     </footer>
