--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StoryBoards</title>
+    <title>StoryBoards | Story Telling Events | Story Writing </title>
+    <meta name="description" content="StoryBoards empower diverse voices and stories all over the world, helping you build a community of readers.
+    And we intends to provide a platform for all the writers.">
     <link rel="stylesheet" href="styles/style.css">
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
-    <section class="header">
+    <header class="header">
         <div class="header__left">
             <div class="logo">
                 <span class="logo__dark">Story</span><br />
@@ -29,7 +30,7 @@
         <div class="header__right">
             <img src="assets/images/illustrations/pr_color06.png" alt="illustration" />
         </div>
-    </section>
+    </header>
     <section class="quote">
         <p>“What we possess is temporary, but what we become is permanent.”</p>
         <p class="quote__author"> – Devdutt Pattanaik </p>
